--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
                 <ul>
                     <li>git init</li>
                     <li>git remote add origin https://github.com/käyttäjä/<em>repon-nimi</em>.git</li>
+                    <li>git add .</li>
+                    <li>git commit -m 'tekstiä'</li>
                     <li>Ensimmäisellä kerralla: git push -u origin master</li>
                 </ul>
 
